[package]
name = "data-test"
description = "Simple data-test (aka table-test), without custom test to run with your test runner"
keywords = ["test", "data-test", "table-test", "data-driven", "data"]
categories = ["development-tools::testing", "development-tools"]
version = "0.1.2"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/jhg/data-test-rs"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
